kubernetes/manifests/development/demo-graphql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    secret.reloader.stakater.com/reload: demo-graphql-config-files
  labels:
    app.kubernetes.io/component: app-server
    app.kubernetes.io/instance: development
    app.kubernetes.io/name: demo-graphql
    app.kubernetes.io/version: 0.1.6
  name: demo-graphql-app-server
  namespace: development-demo-graphql
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: demo-graphql-app-server-c8feae02
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app-server
        app.kubernetes.io/instance: development
        app.kubernetes.io/name: demo-graphql
        app.kubernetes.io/version: 0.1.6
        cdk8s.io/metadata.addr: demo-graphql-app-server-c8feae02
    spec:
      automountServiceAccountToken: false
      containers:
        - command:
            - node
            - /app/applications/demo-graphql/dist/app-server.js
          image: ghcr.io/mxvincent/demo-graphql:0.1.6
          imagePullPolicy: Always
          name: app-server
          ports:
            - containerPort: 4000
              name: http
          resources:
            limits:
              memory: 250Mi
            requests:
              cpu: 50m
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /app/config
              name: secret-demo-graphql-config-files
              subPath: config.json
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: secret-demo-graphql-config-files
          secret:
            secretName: demo-graphql-config-files
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: app-server
    app.kubernetes.io/instance: development
    app.kubernetes.io/name: demo-graphql
    app.kubernetes.io/version: 0.1.6
  name: demo-graphql-app-server
  namespace: development-demo-graphql
spec:
  externalIPs: []
  ports:
    - name: http
      port: 4000
      targetPort: 4000
  selector:
    cdk8s.io/metadata.addr: demo-graphql-app-server-c8feae02
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/component: app-server
    app.kubernetes.io/instance: development
    app.kubernetes.io/name: demo-graphql
    app.kubernetes.io/version: 0.1.6
  name: demo-graphql-app-server
  namespace: development-demo-graphql
spec:
  rules:
    - host: development.demo-graphql.row.ovh
      http:
        paths:
          - backend:
              service:
                name: demo-graphql-app-server
                port:
                  number: 4000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - development.demo-graphql.row.ovh
      secretName: demo-graphql-app-server-cert
